# OpencvJniDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opencv_jni.cpp
app/src/main/java/com/mmf/opencvjnidemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
jarunpack/: build.gradle
jarunpack/src/main/: AndroidManifest.xml
jarunpack/src/main/java/com/mmf/jarunpack/: Test.java
